Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4827

gcc warning xxx not explicitly initialized in the copy constructor

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 7.0.0
    • Build
    • None

    Description

      When compiling with -Wextra

      LogFile.cc:91:1: error: base class ‘class RefCountObj’ should be explicitly initialized in the copy constructor [-Werror=extra]
      LogFormat.cc:238:1: error: base class ‘class RefCountObj’ should be explicitly initialized in the copy constructor [-Werror=extra]
      LogObject.cc:133:1: error: base class ‘class RefCountObj’ should be explicitly initialized in the copy constructor [-Werror=extra]
      RegressionSM.cc:226:1: error: base class ‘class Continuation’ should be explicitly initialized in the copy constructor [-Werror=extra]
      RegressionSM.cc:271:3: error: base class ‘struct RegressionSM’ should be explicitly initialized in the copy constructor [-Werror=extra]
      

      Attachments

        Issue Links

          Activity

            People

              bcall Bryan Call
              bcall Bryan Call
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 50m
                  50m