TS-4827: gcc warning xxx not explicitly initialized in the copy constructor